background image adde

--- a/style.css
+++ b/style.css
@@ -4,14 +4,26 @@
     box-sizing: border-box;
 }
 
+body{
+    background-image: url(img/hulk.jpg);
+    background-size: 1200px;
+    background-attachment: fixed;
+    background-position-x: center;
+}
+
+
 img{
     max-width: 100%;
     display: block;
+    height: 400px;
+    width: 350px;
+    border-radius: 4px ;
 }
 
 .main-heading{
     font-family: 'Oswald', sans-serif;
     text-align: center;
+    color:green;
     margin-bottom:0 ;
 }
 
@@ -29,10 +41,6 @@ img{
     grid-template-columns: repeat(3,1fr);
 }
 
-.cntr img{
-    height: 400px;
-    width: 350px;
-}
 
 .jumbotron{
     height: 500px;
@@ -54,6 +62,11 @@ img{
 }
 
 @media (max-width:400px){
+
+    body{
+        background-image: url(img/spiderman.jpg);
+        background-size: 1200px;
+    }
     .cntr{
         grid-template-columns: 1fr ;
     }
